add density-check to transform endpoint
